# agentscaffold

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  daytona-llms-full.txt  pyproject.toml
agentscaffold/: __init__.py  agent.py  cli.py  scaffold.py
agentscaffold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentscaffold/providers/logging/: langfuse.py  logfire.py  prometheus.py
agentscaffold/providers/mcp/: __init__.py  base.py  client.py
agentscaffold/providers/memory/: chromadb.py  pinecone.py  supabase.py
agentscaffold/providers/search/: brave.py  browserbase.py  google.py
agentscaffold/templates/basic/: .env.example.jinja  README.md.jinja  main.py.jinja  pyproject.toml.jinja  requirements.in.jinja
agentscaffold/templates/basic/{{package_name}}/: __init__.py.jinja  agent.py.jinja
agentscaffold/templates/flask/: .env.example.jinja  app.py.jinja  builder.py.jinja  requirements.in.jinja  requirements.txt.jinja
agentscaffold/templates/flask/static/css/: style.css
agentscaffold/templates/flask/templates/: app_details.html  error.html  index.html
moj-agent/: .env.example  README.md  main.py  pyproject.toml  requirements.in
moj-agent/moj_agent/: __init__.py  agent.py
test-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.in
test-agent/.chroma/: chroma.sqlite3
test-agent/test_agent/: __init__.py  agent.py
tests/: __init__.py  test_agent.py  test_cli.py  test_installation.py  test_mcp.py  test_scaffold.py
