[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscaffold"
version = "0.1.0"
description = "A framework for scaffolding AI agents using Pydantic and Daytona"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.9.0",
    "halo>=0.0.31",
    "pydantic>=2.0.0",
    "spinners>=0.0.24",
    "termcolor>=2.3.0",
    "log-symbols>=0.0.14",
    "jinja2>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.291",
    "mypy>=1.0.0",
]

[project.scripts]
agentscaffold = "agentscaffold.cli:app"
as = "agentscaffold.cli:app"

[tool.setuptools.packages.find]
include = ["agentscaffold*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]